// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default - value[0] 1`] = `
<aside
  className="{\\"style\\":[{\\"overflow\\":\\"auto\\"},null]} hide-on-print ant-layout-sider ant-layout-sider-dark ant-layout-sider-collapsed"
  id="default"
  style={
    Object {
      "flex": "0 0 80px",
      "maxWidth": "80px",
      "minWidth": "80px",
      "width": "80px",
    }
  }
>
  <div
    className="ant-layout-sider-children"
  >
    <div
      style={
        Object {
          "border": "1px solid red",
          "padding": 10,
        }
      }
    >
      content
    </div>
  </div>
</aside>
`;

exports[`Render properties.theme - value[0] 1`] = `
<aside
  className="{\\"style\\":[{\\"overflow\\":\\"auto\\"},null]} hide-on-print ant-layout-sider ant-layout-sider-dark ant-layout-sider-collapsed"
  id="properties.theme"
  style={
    Object {
      "flex": "0 0 80px",
      "maxWidth": "80px",
      "minWidth": "80px",
      "width": "80px",
    }
  }
>
  <div
    className="ant-layout-sider-children"
  >
    <div
      style={
        Object {
          "border": "1px solid red",
          "padding": 10,
        }
      }
    >
      content
    </div>
  </div>
</aside>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.theme 1`] = `true`;

exports[`Test Schema properties.theme 2`] = `null`;
